# phtree-cpp

./: .bazelignore  .bazelrc  .gitignore  .travis.yaml  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.txt  WORKSPACE  c-cpp.yml
.github/workflows/: bazel.yml  cmake-codecov.yml  cmake-windows.yml  cmake.yml
benchmark/: BUILD  CMakeLists.txt  benchmark_util.h  bit_ops_benchmark.cc  bpt_erase_benchmark.cc  bpt_erase_it_benchmark.cc  bpt_insert_benchmark.cc  bpt_iter_benchmark.cc  bpt_lower_bound_benchmark.cc  bpt_results.txt  count_mm_d_benchmark.cc  erase_benchmark.cc  erase_d_benchmark.cc  extent_benchmark.cc  extent_benchmark_weird.cc  find_benchmark.cc  hd_erase_d_benchmark.cc  hd_insert_d_benchmark.cc  hd_knn_d_benchmark.cc  hd_query_d_benchmark.cc  insert_benchmark.cc  insert_box_d_benchmark.cc  insert_d_benchmark.cc  knn_d_benchmark.cc  logging.cc  logging.h  query_benchmark.cc  query_box_d_benchmark.cc  query_d_benchmark.cc  query_mm_box_d_benchmark.cc  query_mm_d_benchmark.cc  query_mm_d_filter_benchmark.cc  update_box_d_benchmark.cc  update_d_benchmark.cc  update_mm_box_d_benchmark.cc  update_mm_d_benchmark.cc
ci/includes/: bazel.sh
ci/linting/: buildifier.sh  clang-format.sh
examples/: BUILD  CMakeLists.txt  example.cc
fuzzer/: b_plus_hash_map_fuzzer.cc  b_plus_map_fuzzer.cc  b_plus_multimap_fuzzer.cc  phtree_mm_relocate_fuzzer.cc
include/phtree/: distance.h  filter.h  phtree.h  phtree_multimap.h
include/phtree/common/: BUILD  b_plus_tree_base.h  b_plus_tree_hash_map.h  b_plus_tree_map.h  b_plus_tree_multimap.h  base_types.h  bits.h  bpt_fixed_vector.h  common.h  flat_array_map.h  flat_sparse_map.h  tree_stats.h
include/phtree/v16/: BUILD  debug_helper_v16.h  entry.h  for_each.h  for_each_hc.h  iterator_base.h  iterator_full.h  iterator_hc.h  iterator_knn_hs.h  iterator_lower_bound.h  node.h  phtree_v16.h
phtree/: BUILD  CMakeLists.txt  phtree.h  phtree_box_d.h  phtree_box_d_test.cc  phtree_box_d_test_filter.cc  phtree_box_d_test_query_types.cc  phtree_box_f_test.cc  phtree_d.h  phtree_d_test.cc  phtree_d_test_copy_move.cc  phtree_d_test_custom_key.cc  phtree_d_test_filter.cc  phtree_d_test_preprocessor.cc  phtree_f_test.cc  phtree_multimap.h  phtree_multimap_box_d_test.cc  phtree_multimap_d_test.cc  phtree_multimap_d_test_copy_move.cc  phtree_multimap_d_test_filter.cc  phtree_multimap_d_test_unique_ptr_values.cc  phtree_test.cc  phtree_test_const_values.cc  phtree_test_issues.cc  phtree_test_ptr_values.cc  phtree_test_unique_ptr_values.cc
phtree/benchmark/: BUILD  benchmark_util.h  count_mm_d_benchmark.cc  erase_benchmark.cc  erase_d_benchmark.cc  extent_benchmark.cc  extent_benchmark_weird.cc  find_benchmark.cc  hd_erase_d_benchmark.cc  hd_insert_d_benchmark.cc  hd_knn_d_benchmark.cc  hd_query_d_benchmark.cc  insert_benchmark.cc  insert_box_d_benchmark.cc  insert_d_benchmark.cc  knn_d_benchmark.cc  logging.cc  query_benchmark.cc  query_box_d_benchmark.cc  query_d_benchmark.cc  query_mm_box_d_benchmark.cc  query_mm_d_benchmark.cc  query_mm_d_filter_benchmark.cc  update_box_d_benchmark.cc  update_d_benchmark.cc  update_mm_box_d_benchmark.cc  update_mm_d_benchmark.cc
phtree/common/: BUILD  CMakeLists.txt  b_plus_tree_hash_map.h  b_plus_tree_hash_map_test.cc  b_plus_tree_map.h  b_plus_tree_map_test.cc  base_types.h  base_types_test.cc  bits.h  bits_test.cc  common.h  common_test.cc  converter.h  converter_test.cc  debug_helper.h  distance.h  distance_test.cc  filter.h  filter_test.cc  flat_array_map.h  flat_array_map_test.cc  flat_sparse_map.h  flat_sparse_map_test.cc  ph_base_types.h  ph_base_types_test.cc  ph_bits.h  ph_bits_test.cc  ph_common.h  ph_common_test.cc  ph_distance.h  ph_distance_test.cc  ph_filter.h  ph_filter_test.cc  ph_flat_array_map.h  ph_flat_array_map_test.cc  ph_flat_sparse_map.h  ph_flat_sparse_map_test.cc  ph_preprocessor.h  ph_preprocessor_test.cc  ph_tree_debug_helper.h  (+2 more)
phtree/testing/: BUILD
phtree/testing/gtest_main/: BUILD  gtest_main.cc
phtree/v16/: BUILD  CMakeLists.txt  debug_helper.h  debug_helper_v16.h  entry.h  for_each.h  for_each_hc.h  iterator_base.h  iterator_full.h  iterator_hc.h  iterator_knn_hs.h  iterator_simple.h  iterator_with_parent.h  node.h  ph_entry.h  ph_iterator_base.h  ph_iterator_full.h  ph_iterator_hc.h  ph_iterator_knn_hs.h  ph_iterator_simple.h  phtree_v16.h
test/: BUILD  CMakeLists.txt  distance_test.cc  filter_test.cc  phtree_box_d_test.cc  phtree_box_d_test_filter.cc  phtree_box_d_test_query_types.cc  phtree_box_f_test.cc  phtree_d_test.cc  phtree_d_test_copy_move.cc  phtree_d_test_custom_key.cc  phtree_d_test_filter.cc  phtree_d_test_preprocessor.cc  phtree_f_test.cc  phtree_multimap_box_d_test.cc  phtree_multimap_d_test.cc  phtree_multimap_d_test_copy_move.cc  phtree_multimap_d_test_filter.cc  phtree_multimap_d_test_unique_ptr_values.cc  phtree_test.cc  phtree_test_const_values.cc  phtree_test_issues.cc  phtree_test_ptr_values.cc  phtree_test_unique_ptr_values.cc
test/common/: BUILD  CMakeLists.txt  b_plus_tree_hash_map_test.cc  b_plus_tree_map_test.cc  b_plus_tree_multimap_test.cc  b_vector_test.cc  bits_test.cc  common_test.cc  converter_test.cc  distance_test.cc  filter_test.cc  flat_array_map_test.cc  flat_sparse_map_test.cc  scripts.cmake
test/testing/gtest_main/: BUILD  gtest_main.cc
tools/: bazel
tools/build_rules/: http.bzl  utils.bzl
tools/runners/sanitizers/valgrind-memcheck/: valgrind-memcheck.sh  valgrind-suppressions.txt
